@@ -1,4 +1,4 @@
-/* $Id: text.h,v 1.6 2004-10-23 17:42:13 schaffner Exp $ */
+/* $Id: text.h,v 1.7 2004-11-28 07:32:12 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -749,6 +749,7 @@ extern char *Text_string[];
 #define MENU_DETAIL_TEXT(detail) (*(&TXT_DETAIL_1 + (detail)))
 
 void decode_text_line(char *text_line); // decryption for bitmaps.tbl
+void decode_text(char *text, int len);  // decryption for briefings, etc.
 void load_text(void);
 
 #endif /* _TEXT_H */
